--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+
+
+
+body {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    /* Default to regular weight */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
+}
+
+.scrollbar-hidden {
+    -ms-overflow-style: none;
+    /* Internet Explorer and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
